--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -23,7 +23,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/locations_name"
+        android:id="@+id/place_name"
         style="@style/TextView"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="10dp"/>
 
     <TextView
-        android:id="@+id/location_address"
+        android:id="@+id/place_address"
         style="@style/TextView"
         android:textColor="#FFFFFF"
         android:layout_alignBottom="@id/card"
@@ -60,7 +60,6 @@
         android:id="@+id/description"
         style="@style/TextView"
         android:layout_below="@id/card"
-        android:textColor="#696969"
         android:layout_toRightOf="@id/description_icon"
         android:layout_marginBottom="14dp" />
 
@@ -68,7 +67,6 @@
         android:id="@+id/phone_number"
         style="@style/TextView"
         android:layout_below="@id/w_hours"
-        android:textColor="#0288D1"
         android:layout_toRightOf="@id/description_icon"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="14dp" />
@@ -84,7 +82,7 @@
         android:layout_marginBottom="14dp" />
 
     <ImageView
-        android:id="@+id/w_hours_icon"
+        android:id="@+id/working_hours_icon"
         style="@style/ImageView"
         android:src="@drawable/ic_baseline_access_time_24"
         android:layout_below="@id/description"
@@ -93,28 +91,10 @@
 
     <TextView
         android:id="@+id/w_hours"
-        android:textColor="#000000"
         style="@style/TextView"
         android:layout_below="@id/description"
         android:layout_toRightOf="@id/description_icon"
         android:layout_marginBottom="14dp"
         android:layout_marginTop="0dp" />
-
-
-    <ImageView
-        android:id="@+id/hide_button"
-        style="@style/ImageView"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="135dp" />
-
-    <ImageView
-        android:id="@+id/show_more_button"
-        style="@style/ImageView"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="135dp"/>
 
 </RelativeLayout>
